--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:100%">
+        <img src="https://cdn.glitch.com/46a912be-e04c-4158-b94a-2d6ab5ffb9ef%2Farticle-rust-survival-tips-sunset.jpg?v=1560724001549" 
+             alt="place holder image" title="dummy image" style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+        <img src="https://cdn.glitch.com/46a912be-e04c-4158-b94a-2d6ab5ffb9ef%2Farticle-rust-survival-tips-sunset.jpg?v=1560724001549" 
+             alt="place holder image" title="dummy image"  style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
         <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+        <img src="https://cdn.glitch.com/46a912be-e04c-4158-b94a-2d6ab5ffb9ef%2Farticle-rust-survival-tips-sunset.jpg?v=1560724001549" 
+             alt="place holder image" title="dummy image"  style="width:100%">
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
