--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button"><b>RUST</b> Games</a>
+    <a href="#home" class="w3-bar-item w3-button w3-xlarge"><b>RUST</b></a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#projects" class="w3-bar-item w3-button">Projects</a>
+      <a href="#projects" class="w3-bar-item w3-button w3-padding">Projects</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
       <a href="#contact" class="w3-bar-item w3-button">Contact</a>
     </div>
@@ -20,10 +20,12 @@
 </div>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="https://cdn.glitch.com/46a912be-e04c-4158-b94a-2d6ab5ffb9ef%2F6io9bdnhsj611.fw.png?v=1560723285388" alt="hero landscape" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-orange"><span class="w3-padding w3-black w3-opacity-min"><b>Rust</b></span> <span class="w3-hide-small w3-text-light-grey">Games</span></h1>
+<header class="w3-display-container w3-content w3-wide" style="max-width:100%;" id="home">
+  <img class="w3-image" src="https://cdn.glitch.com/46a912be-e04c-4158-b94a-2d6ab5ffb9ef%2F6io9bdnhsj611.fw.png?v=1560723285388" alt="hero landscape" width="100%" height="800">
+  <div class="w3-margin-top w3-display-middle">
+    <h1 class="w3-xxxlarge w3-text-white w3-padding-24"><b>RAID</b> </h1>
+    <h2 class="w3-xxxlarge w3-text-white w3-padding-24"><b>PVP</b> </h2>
+    <h3 class="w3-xxxlarge w3-text-white w3-padding-24"><b>SURVIVE</b></h3>
   </div>
 </header>
 
